--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 main {
     background-color: #F5F5F5;
-    height: 400px;
+    height: 90vh;
     max-width: 800px;
     border-radius: 5px;
     padding: 20px;
@@ -73,4 +73,11 @@ main {
 
 .roll-dice:active {
     box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+}
+
+.score{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
